# server/db/permissions.go
@@ -727,7 +727,7 @@ func canAccessApiKey(ctx context.Context, userID uuid.UUID, operation CRUDOperat
 			shares, err := queries().GetApiKeySharesByApiKeyID(ctx, apiKeyID)
 			if err == nil {
 				for _, share := range shares {
-					if share.WorkshopID.Valid && share.WorkshopID.UUID == *workshopID && share.AllowPublicGameSponsoring {
+					if share.WorkshopID.Valid && share.WorkshopID.UUID == *workshopID {
 						return nil
 					}
 				}
